// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressSteps > snapshots > matches snapshot for config step 1`] = `
<div
  class="progress-steps flex flex-col items-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_e_-tooltip-config"
        class="group relative"
        data-active="true"
        data-completed="false"
        data-testid="progress-step-container-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
          data-active="true"
          data-completed="false"
          data-testid="progress-step-circle-config"
        >
          1
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-config"
          id="_r_e_-tooltip-config"
          role="tooltip"
        >
          Configure your API keys and select operating mode
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
        data-testid="progress-step-connector-0"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_e_-tooltip-ensemble"
        class="group relative"
        data-active="false"
        data-completed="false"
        data-testid="progress-step-container-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-ensemble"
        >
          2
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-ensemble"
          id="_r_e_-tooltip-ensemble"
          role="tooltip"
        >
          Select 2-6 AI models to compare
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
        data-testid="progress-step-connector-1"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_e_-tooltip-prompt"
        class="group relative"
        data-active="false"
        data-completed="false"
        data-testid="progress-step-container-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-prompt"
        >
          3
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-prompt"
          id="_r_e_-tooltip-prompt"
          role="tooltip"
        >
          Enter your question or prompt
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
        data-testid="progress-step-connector-2"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_e_-tooltip-review"
        class="group relative"
        data-active="false"
        data-completed="false"
        data-testid="progress-step-container-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-review"
        >
          4
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-review"
          id="_r_e_-tooltip-review"
          role="tooltip"
        >
          View and compare AI responses
        </span>
      </div>
    </div>
  </div>
  <div
    class="flex items-start mt-2"
  >
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-primary"
        data-step-state="active"
      >
        Config
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
        data-step-state="upcoming"
      >
        Ensemble
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
        data-step-state="upcoming"
      >
        Prompt
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
        data-step-state="upcoming"
      >
        Review
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps > snapshots > matches snapshot for ensemble step 1`] = `
<div
  class="progress-steps flex flex-col items-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_f_-tooltip-config"
        class="group relative"
        data-active="false"
        data-completed="true"
        data-testid="progress-step-container-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-config"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-config"
          id="_r_f_-tooltip-config"
          role="tooltip"
        >
          Configure your API keys and select operating mode
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
        data-testid="progress-step-connector-0"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_f_-tooltip-ensemble"
        class="group relative"
        data-active="true"
        data-completed="false"
        data-testid="progress-step-container-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
          data-active="true"
          data-completed="false"
          data-testid="progress-step-circle-ensemble"
        >
          2
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-ensemble"
          id="_r_f_-tooltip-ensemble"
          role="tooltip"
        >
          Select 2-6 AI models to compare
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
        data-testid="progress-step-connector-1"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_f_-tooltip-prompt"
        class="group relative"
        data-active="false"
        data-completed="false"
        data-testid="progress-step-container-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-prompt"
        >
          3
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-prompt"
          id="_r_f_-tooltip-prompt"
          role="tooltip"
        >
          Enter your question or prompt
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
        data-testid="progress-step-connector-2"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_f_-tooltip-review"
        class="group relative"
        data-active="false"
        data-completed="false"
        data-testid="progress-step-container-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-review"
        >
          4
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-review"
          id="_r_f_-tooltip-review"
          role="tooltip"
        >
          View and compare AI responses
        </span>
      </div>
    </div>
  </div>
  <div
    class="flex items-start mt-2"
  >
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
        data-step-state="completed"
      >
        Config
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-primary"
        data-step-state="active"
      >
        Ensemble
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
        data-step-state="upcoming"
      >
        Prompt
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
        data-step-state="upcoming"
      >
        Review
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps > snapshots > matches snapshot for prompt step 1`] = `
<div
  class="progress-steps flex flex-col items-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_g_-tooltip-config"
        class="group relative"
        data-active="false"
        data-completed="true"
        data-testid="progress-step-container-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-config"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-config"
          id="_r_g_-tooltip-config"
          role="tooltip"
        >
          Configure your API keys and select operating mode
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
        data-testid="progress-step-connector-0"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_g_-tooltip-ensemble"
        class="group relative"
        data-active="false"
        data-completed="true"
        data-testid="progress-step-container-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-ensemble"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-ensemble"
          id="_r_g_-tooltip-ensemble"
          role="tooltip"
        >
          Select 2-6 AI models to compare
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
        data-testid="progress-step-connector-1"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_g_-tooltip-prompt"
        class="group relative"
        data-active="true"
        data-completed="false"
        data-testid="progress-step-container-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
          data-active="true"
          data-completed="false"
          data-testid="progress-step-circle-prompt"
        >
          3
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-prompt"
          id="_r_g_-tooltip-prompt"
          role="tooltip"
        >
          Enter your question or prompt
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
        data-testid="progress-step-connector-2"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_g_-tooltip-review"
        class="group relative"
        data-active="false"
        data-completed="false"
        data-testid="progress-step-container-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-review"
        >
          4
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-review"
          id="_r_g_-tooltip-review"
          role="tooltip"
        >
          View and compare AI responses
        </span>
      </div>
    </div>
  </div>
  <div
    class="flex items-start mt-2"
  >
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
        data-step-state="completed"
      >
        Config
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
        data-step-state="completed"
      >
        Ensemble
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-primary"
        data-step-state="active"
      >
        Prompt
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
        data-step-state="upcoming"
      >
        Review
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps > snapshots > matches snapshot for review step 1`] = `
<div
  class="progress-steps flex flex-col items-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_h_-tooltip-config"
        class="group relative"
        data-active="false"
        data-completed="true"
        data-testid="progress-step-container-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-config"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-config"
          id="_r_h_-tooltip-config"
          role="tooltip"
        >
          Configure your API keys and select operating mode
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
        data-testid="progress-step-connector-0"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_h_-tooltip-ensemble"
        class="group relative"
        data-active="false"
        data-completed="true"
        data-testid="progress-step-container-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-ensemble"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-ensemble"
          id="_r_h_-tooltip-ensemble"
          role="tooltip"
        >
          Select 2-6 AI models to compare
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
        data-testid="progress-step-connector-1"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_h_-tooltip-prompt"
        class="group relative"
        data-active="false"
        data-completed="true"
        data-testid="progress-step-container-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-prompt"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-prompt"
          id="_r_h_-tooltip-prompt"
          role="tooltip"
        >
          Enter your question or prompt
        </span>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
        data-testid="progress-step-connector-2"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        aria-describedby="_r_h_-tooltip-review"
        class="group relative"
        data-active="true"
        data-completed="false"
        data-testid="progress-step-container-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
          data-active="true"
          data-completed="false"
          data-testid="progress-step-circle-review"
        >
          4
        </div>
        <span
          class="pointer-events-none absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-popover px-2 py-1 text-xs text-popover-foreground shadow-md opacity-0 transition-opacity group-hover:opacity-100"
          data-testid="progress-step-tooltip-review"
          id="_r_h_-tooltip-review"
          role="tooltip"
        >
          View and compare AI responses
        </span>
      </div>
    </div>
  </div>
  <div
    class="flex items-start mt-2"
  >
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
        data-step-state="completed"
      >
        Config
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
        data-step-state="completed"
      >
        Ensemble
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
        data-step-state="completed"
      >
        Prompt
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-primary"
        data-step-state="active"
      >
        Review
      </span>
    </div>
  </div>
</div>
`;
